== 0.10.0 (HEAD)

* JSLint.run now accepts a hash of JSLINT options as an optional
  second argument. eg, JSLint.run(f, sloppy: true)

== 0.9.0 (2012.01.26)

* Initial release.